# django-tropeiro

./: .gitignore  README.md  pyproject.toml  startproject.sh
ks_settings/: env.py  middleware.py  router.py  serializers.py  settings.py  urls.py  views.py
ks_settings/models/: __init__.py  user.py
src/tropeiro/: env.py  serializers.py  settings.py  views.py
src/tropeiro/models/: schema_field.py
src/tropeiro/serializers/: __init__.py  schema_field.py
templates/project/: Justfile
templates/project/api/: models.py-tpl  serializers.py-tpl  urls.py-tpl  views.py-tpl
templates/project/api/management/commands/: seed.py-tpl
templates/project/etc/: admin.just
templates/project/project_name/: settings.py-tpl  urls.py-tpl
tropeiro/: env.py  middleware.py  settings.py  urls.py  views.py
tropeiro/models/: model.py  user.py
